# unifi-protect-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml
src/: api.rs  auth.rs  lib.rs  models.rs
src/api/: cameras.rs  device_tags.rs
src/models/: camera.rs  device_tag.rs
