[package]
name = "unifi-protect-client"
version = "0.2.0"
edition = "2024"
description = "A Rust client library for interacting with the UniFi Protect API"
license = "MIT"
repository = "https://github.com/Xapphire13/unifi-protect-client"
homepage = "https://github.com/Xapphire13/unifi-protect-client"
keywords = ["unifi", "protect", "api", "client"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
typesafe_builder = "1.4.0"

[dev-dependencies]
anyhow = "1.0.98"
